<resources>
    <string name="app_name">TravelerSupport</string>
    <string name="title_activity_login">TravlerSupport</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id">137586477286-kdaaakliu9sudh19sujjufp5bdhp42i5.apps.googleusercontent.com</string>
    <string name="booking_list">Booking list</string>
    <string name="free_room">Free room: </string>
    <string name="price_per_night">Price per night </string>
    <string name="address">Accommodation address </string>
    <string name="description">Description </string>
    <string name="nearby_amenities">Nearby amenities</string>
    <string name="appname">Travel Support</string>
    <string name="wellcome">Wellcome</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="get_now">Get now</string>
    <string name="login">Login</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="or">OR</string>
    <string name="create_new_account">Create new account</string>
    <string name="have_account">Have account?</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="sign_up">Sign up</string>
    <string name="choose_an_accommodation">Choose an accommodation</string>
    <string name="accommodation_list">Accommodation list</string>
    <string name="choose_an_city">Choose an city</string>
    <string name="city_list">City list</string>
    <string name="favorite_list">Favorite list</string>
    <string name="hello">Hello</string>
    <string name="booked_room">Booked Room</string>
    <string name="research">Research</string>
    <string name="loading_data_please_wait">Loading data, please wait…</string>
    <string name="select_number_of_rooms">Select number of rooms: </string>
    <string name="there_are_no_matching_results">There are no matching results</string>
    <string name="confirm_booking">Confirm booking</string>
    <string name="confirm">Confirm</string>
    <string name="vietnamese">vietnamese</string>
    <string name="chinese">chinese</string>
    <string name="choose_country">Choose Country</string>
    <string name="select_booking_date">Select booking date</string>
    <string name="total_rooms">Total rooms: </string>
    <string name="booking_now">Booking now</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="this_city_has_no_accommodation_yet">This city has no Accommodation yet</string>
    <string name="there_are_no_favorites_yet">There are no favorites yet</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="taxes_and_fees_included">Taxes and fees included</string>
    <string name="no_credit_card_des">All options can be booked without a credit card</string>
    <string name="no_credit_card_required">No credit card required</string>
    <string name="whole_apartment">Whole apartment</string>
    <string name="privacy_at_home_alone">Privacy at home alone</string>
    <string name="login_with_google">Login with Google</string>
    <string name="email">Email</string>
</resources>