<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.UserFavoriteListActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/img_background_login"
                android:orientation="vertical"
                android:elevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageButton
                        android:id="@+id/btnBack"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/background_fullbutton"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/back_icon"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/txvTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginStart="10dp"
                        android:layout_gravity="center"
                        android:text="@string/favorite_list" />
                </LinearLayout>

            </LinearLayout>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/srlReload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_fullbutton">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:visibility="gone"
                        android:text="@string/there_are_no_favorites_yet"
                        android:padding="10dp"
                        android:id="@+id/txvInfor"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcvFavorite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>

    </LinearLayout>

</layout>