<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.mapdemo.ui.viewmodel.UserCityListViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.UserCityListActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:elevation="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageButton
                        android:id="@+id/btnBack"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/background_fullbutton"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/back_icon" />

                    <TextView
                        android:id="@+id/txvTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/choose_an_city" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:queryHint="Search..." />
            </LinearLayout>
            <TextView
                android:id="@+id/txvInfor"
                android:textSize="18dp"
                android:visibility="gone"
                android:textStyle="italic"
                android:textAlignment="center"
                android:layout_margin="30dp"
                android:text="@string/there_are_no_matching_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                android:background="#48C8C2C2"
                android:layout_height="match_parent">
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="80dp"
                    android:text="@string/loading_data_please_wait"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</layout>