<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.mapdemo.ui.viewmodel.UserAccomListCityViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.UserAccomListCityActivity">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:id="@+id/srlReload"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:elevation="10dp"
                android:background="@drawable/img_background_login">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <ImageButton
                        android:id="@+id/btnBack"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/background_fullbutton"
                        android:padding="10dp"
                        android:scaleType="fitCenter"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/back_icon"
                        android:contentDescription="TODO" />

                    <TextView
                        android:id="@+id/txvCityName"
                        android:layout_width="0dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:text="@string/choose_an_accommodation" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/background_fullbutton"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:defaultQueryHint="Find by name or address"
                    android:layout_weight="2" />
                <ImageButton
                    android:id="@+id/btnFilter"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:background="@drawable/background_fullbutton"
                    android:src="@drawable/img"
                    android:scaleType="fitCenter"
                    android:contentDescription="TODO" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_shadow"
                android:paddingBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:text="@{viewModel.price}"
                    android:textSize="12sp" />
                <SeekBar
                    android:id="@+id/rsbPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="10000000"
                    android:min="500000"
                    android:value="500000,10000000" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_fullbutton"
                android:visibility="gone"
                android:orientation="vertical">
                <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    app:mcv_selectionMode="range"/>
                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/confirm" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black_mid_emp"/>
            <TextView
                android:id="@+id/txvInfor"
                android:textSize="18sp"
                android:visibility="gone"
                android:textStyle="italic"
                android:textAlignment="center"
                android:layout_margin="30dp"
                android:text="@string/there_are_no_matching_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
                android:background="#48C8C2C2"
                android:layout_height="match_parent">
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="80dp"
                    android:text="@string/loading_data_please_wait" />
            </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/background_fullbutton"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcvCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txvInforAcc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/this_city_has_no_accommodation_yet"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:visibility="gone"/>
                </RelativeLayout>


        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

</layout>